# Stocks-and-portfolio-analyst-rag

./: README.md  pyproject.toml
agent/: main.py  prompts.py  stock_analysis.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/components/: cash-panel.tsx  component-tree.tsx  generative-canvas.tsx  prompt-panel.tsx
frontend/src/app/components/chart-components/: allocation-table.tsx  bar-chart.tsx  insight-card.tsx  line-chart.tsx  section-title.tsx
frontend/src/utils/: prompts.ts
